# pyproforma

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  demo_line_items_move.py  demo_move_method.py  example_values_setter.py  mkdocs.yml  pyproject.toml  test_add_line_item_replace.py  test_category_total.py  test_empty_model.py  test_improved_validation.py  test_label_setter.py  test_list_setter.py  test_manual_functionality.py  test_name_setter.py  test_pandas_integration.py  test_pie_chart_integration.py  test_pie_chart_year_default.py  test_setter.py  test_simplified_pandas.py  test_totals_fix.py  test_values_setter.py
.github/: copilot-instructions.md
docs/: changelog.md  charts.md  development.md  getting-started.md  index.md  line-items.md  requirements.txt  tables.md  tags.md  v1_charts_reference.md
docs/api/: category.md  category_results.md  charts.md  compare.md  constraint.md  constraint_results.md  line_item.md  line_item_results.md  model.md  models.md  table.md  tables.md
docs/examples/: basic-usage.ipynb  functional-api-usage.ipynb  index.md  revenues_and_expenses_example.md
docs/user-guide/: basic-usage.md  installation.md  working-with-categories.md  working-with-line-items.md
examples/: README.md  __init__.py  advanced_model.ipynb  charts_example.ipynb  comparison_and_scenarios.ipynb  debt_example.ipynb  demo_to_html.ipynb  demo_to_html_2.ipynb  example_1.ipynb  from_template_example.ipynb  input_line_and_assumption.ipynb  line_item_result_example.ipynb  model_with_constants.py  model_with_debt.py  quick_demo.ipynb  readme_examples.ipynb  revenues_and_expenses_example.ipynb  scalar_values_example.ipynb  scalar_values_example.py  simple_model.ipynb  simple_model_1.py  simple_model_2.ipynb  simple_model_2.py  table_class_demo.ipynb  table_show_demo.py  tables_example.ipynb  tags_example.ipynb  value_format_example.ipynb
examples/coffee_shop/: app.py  coffee_shop.qmd  model.py  notebook.ipynb  run.py
examples/for-docs/: tags.ipynb
examples/for_docs/: matplotlib-charts.ipynb  working-with-categories.ipynb  working-with-line-items.ipynb  working-with-line-items.py
examples/three_statement_model/: model.py  run.py  tables.py
examples/v2/: advanced_model.ipynb  advanced_model.py  comparison_and_scenarios.ipynb  debt_example.ipynb  debt_example.py  from_template_example.ipynb  from_template_example.py  line_item_result_example.ipynb  line_item_result_example.py  quick_demo.ipynb  quick_demo.py  simple_model.ipynb  simple_model.py  tables_example.ipynb  tables_example.py  tags_example.ipynb  tags_example.py  value_format_example.ipynb  value_format_example.py
examples/water_utility/: app.py  model.py  notebook.ipynb  run.py  tables.py
explorer/: app.py  example.py
explorer/templates/: assumption.html  base.html  chart_view.html  index.html  inputs.html  line_item.html  table_view.html  view.html
flask_pyproforma/: app.py  example.py
pyproforma/: README.md  __init__.py  assumption.py  assumption_result.py  calculation_engine.py  constants.py  data_import.py  input_assumption.py  model_namespace.py  proforma_model.py  reserved_words.py  tags_namespace.py
pyproforma/chart/: __init__.py  chart.py  chart_spec.py
pyproforma/charts/: __init__.py  chart_class.py  chart_def.py  charts.py
pyproforma/compare/: __init__.py  model_comparison.py
pyproforma/engine/: __init__.py  calculation_engine.py  line_item_values.py  model_namespace.py
pyproforma/explorer/: __init__.py  app.py  components.py
pyproforma/generators/: __init__.py  debt.py  generator_class.py  short_term_debt.py
pyproforma/line_items/: __init__.py  debt_line.py  fixed_line.py  formula_line.py  input_line.py  line_item.py  line_item_result.py  line_item_selection.py  line_item_values.py
pyproforma/models/: __init__.py  _utils.py  category.py  compare.py  constraint.py  expression.py  formula.py  line_item.py  model.py  model_add.py  model_delete.py  model_update.py  multi_model_compare.py  results.py  (+1 more)
tests/: conftest.py  test_assumption_result.py  test_assumption_values.py  test_calculation_engine.py  test_charts.py  test_examples.py  test_explorer.py  test_from_template.py  test_input_line.py  test_line_item_table.py  test_model_comparison.py  test_model_get_value.py  test_proforma_model.py  test_reserved_words.py  test_row_types.py  test_tables.py  test_tags.py  test_time_offsets.py  test_typo_detection.py
(+289 files in other folders)
