[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproforma"
version = "0.1.2"
description = "A Python package for financial modeling and reporting"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Robert Hannay", email = "rhannay@gmail.com"},
]
maintainers = [
    {name = "Robert Hannay", email = "rhannay@gmail.com"},
]
keywords = ["finance", "modeling", "reporting", "excel", "proforma"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
    "numexpr>=2.7.0",
    "jinja2>=3.0.0",
    "plotly>=5.0.0",
    "PyYAML>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/rhannay/pyproforma"
Repository = "https://github.com/rhannay/pyproforma"
Documentation = "https://github.com/rhannay/pyproforma#readme"
Issues = "https://github.com/rhannay/pyproforma/issues"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyproforma*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
