[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyproforma"
version = "0.2.4"
description = "A Python package for financial modeling and reporting"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Robert Hannay", email = "rhannay@gmail.com"},
]
maintainers = [
    {name = "Robert Hannay", email = "rhannay@gmail.com"},
]
keywords = ["finance", "modeling", "reporting", "excel", "proforma"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rhannay/pyproforma"
Repository = "https://github.com/rhannay/pyproforma"
Documentation = "https://pyproforma.readthedocs.io/en/latest/"
Issues = "https://github.com/rhannay/pyproforma/issues"

[project.optional-dependencies]
pandas = [
    "pandas>=1.3.0",
]
excel = [
    "openpyxl>=3.0.0",
]
charts = [
    "matplotlib>=3.5.0",
]
notebook = [
    "ipython>=7.0.0",
]
explorer = [
    "flask>=2.0.0",
]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "pandas>=1.3.0",
    "openpyxl>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyproforma*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"pyproforma.explorer" = ["templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.ruff]
line-length = 100
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
]

[tool.ruff.lint.per-file-ignores]
"examples/**/run.py" = ["E402"]  # sys.path.insert before local imports is intentional
"pyproforma/table/table_class.py" = ["E501"]  # error message strings are intentionally verbose

[tool.ruff.format]
quote-style = "double"
